// Magermoney — full schema across all phases.
// Open in https://dbdiagram.io (Import > DBML) for an interactive ER diagram.
// Phase 1 tables are marked [phase 1]; the rest land with their phase.
// Conventions: uuid PKs, user_id on every user table (RLS), numeric for money and rates,
// timestamptz created_at/updated_at (omitted below for brevity), no soft delete.

Project magermoney {
  database_type: 'PostgreSQL'
  Note: 'Vocabulary: CONTEXT.md. Decisions: docs/adr/.'
}

Enum currency_kind { fiat crypto }
Enum rate_source { api manual }
Enum account_kind { bank_account card deposit broker crypto_wallet cash }
Enum card_type { debit credit }
Enum balance_entry_origin { manual transfer inflow }
Enum expense_period { monthly yearly }
Enum snapshot_status { draft confirmed legacy }
Enum locale { ru en }

// ---------- phase 1 ----------

Table profiles [note: 'phase 1. One row per auth.users row, created by trigger.'] {
  id uuid [pk, note: '= auth.users.id']
  display_name text
  locale locale [not null, default: 'ru']
  default_currency text [not null, ref: > currencies.code]
  reporting_currencies text[] [not null, note: 'Display currency switch list']
  onboarding_completed_at timestamptz
}

Table currencies [note: 'phase 1. Shared reference data, service-role writes only.'] {
  code text [pk]
  kind currency_kind [not null]
  scale int [not null, note: '2 fiat, up to 8 crypto; Intl does not know crypto']
  symbol text [note: 'null = derive from Intl.NumberFormat; set only for crypto or overrides (₿, Ξ, ₮)']
  name_ru text [note: 'null = Intl.DisplayNames']
  name_en text [note: 'null = Intl.DisplayNames']
  icon text [note: 'Iconify id override, e.g. "cryptocurrency-color:btc"; null = auto: circle-flags for fiat, cryptocurrency-color by ticker for crypto, initials fallback']
}

Table rates [note: 'phase 1. Append-only. quote is always USD. user_id null = shared api rate; set = user manual override.'] {
  id uuid [pk]
  base text [not null, ref: > currencies.code]
  quote text [not null, default: 'USD']
  value numeric [not null]
  date date [not null]
  source rate_source [not null]
  user_id uuid [ref: > profiles.id, note: 'null for shared rows']
  Indexes {
    (base, quote, date, source, user_id) [unique]
    (date)
  }
}

// ---------- phase 2: where the money is ----------

Table accounts [note: 'phase 2. Holds exactly one currency. Card-specific fields are optional. check: card fields only when kind = card'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  name text [not null]
  bank text [not null, note: 'bank or wallet provider']
  country text [not null, note: 'ISO 3166-1 alpha-2; "XX" for crypto/cash']
  currency text [not null, ref: > currencies.code]
  kind account_kind [not null]
  card_type card_type [note: 'card only']
  is_spending bool [not null, default: false, note: 'counts towards available-until-payday']
  is_pinned bool [not null, default: false, note: 'shown in the Home screen strip']
  goal_id uuid [ref: > goals.id, note: 'phase 4. The goal this account funds, at most one. Deleting the goal sets it null — the money did not go anywhere.']
  card_last4 text
  card_network text [note: 'Visa, MasterCard, Mir']
  card_tier text [note: 'Classic, Gold, Platinum, Elite, Digital']
  card_expires date
  note text [note: 'free-form: phone, passport, fees, perks']
  sort_order int [not null, default: 0]
  archived_at timestamptz [note: 'hidden from lists, kept for history']
  Indexes {
    (user_id, archived_at, sort_order)
  }
}

Table balance_entries [note: 'phase 2. Append-only journal. Current balance = latest entry per account. ADR 0002.'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  account_id uuid [not null, ref: > accounts.id]
  amount numeric [not null, note: 'declared balance, in the account currency']
  recorded_at timestamptz [not null]
  origin balance_entry_origin [not null]
  transfer_id uuid [ref: > transfers.id]
  inflow_id uuid [ref: > inflows.id, note: 'phase 3. set exactly when origin = inflow; cascades with the inflow']
  note text
  Indexes {
    (account_id, recorded_at, created_at) [note: 'latest = order by recorded_at desc, created_at desc']
    (transfer_id) [note: 'partial, where transfer_id is not null']
    (inflow_id) [unique, note: 'partial, where inflow_id is not null; one balance entry per credited inflow (ADR 0002)']
  }
}

Table transfers [note: 'phase 2. Produces two balance_entries. Cross-currency: both amounts declared, rate and fee derived. checks: from <> to, both amounts > 0'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  from_account_id uuid [not null, ref: > accounts.id]
  to_account_id uuid [not null, ref: > accounts.id]
  amount_sent numeric [not null]
  amount_received numeric [not null]
  occurred_at timestamptz [not null]
  note text
  Indexes {
    (user_id, occurred_at, id) [note: 'order by occurred_at desc, id desc']
    (from_account_id)
    (to_account_id)
  }
}

// ---------- phase 3: what comes in and goes out ----------

Table income_sources [note: 'phase 3. Net is derived, never stored. Active period instead of delete.'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  name text [not null]
  gross_amount numeric [not null, note: 'monthly; check >= 0']
  currency text [not null, ref: > currencies.code]
  tax_rate numeric [not null, default: 0, note: '0 <= x < 1']
  commission_rate numeric [not null, default: 0, note: '0 <= x < 1']
  pay_days int[] [not null, default: '{}', note: 'days of month 1..31, e.g. {10,25}; empty = irregular source']
  is_primary bool [not null, default: false, note: 'partial unique index: one primary per user']
  active_from date [not null]
  active_to date [note: 'check: >= active_from']
  default_account_id uuid [ref: > accounts.id, note: 'where inflows usually land; on delete set null']
  Indexes {
    (user_id, active_from)
  }
}

Table inflows [note: 'phase 3 (history import in phase 5). Actual dated receipts. check: account_id and credited_amount are set together.'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  income_source_id uuid [not null, ref: > income_sources.id, note: 'on delete no action (a direct delete is refused the same as restrict; deferred so a profile cascade completes)']
  amount numeric [not null, note: 'check > 0']
  currency text [not null, ref: > currencies.code]
  received_on date [not null]
  realised_rate_to_usd numeric [note: 'check > 0; rate actually obtained that day; null → use rates table']
  account_id uuid [ref: > accounts.id, note: 'set when credited to an account; on delete no action (refused like restrict; deferred for the profile cascade)']
  credited_amount numeric [note: 'check > 0; what landed on the account, in the account currency; realised rate = credited / amount']
  note text
  Indexes {
    (user_id, received_on, id) [note: 'order by received_on desc, id desc']
    (income_source_id)
    (account_id) [note: 'partial, where account_id is not null']
  }
}

Table expense_categories [note: 'phase 3. Housing, subscriptions, car, health, telecom, food, family…'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  name text [not null]
  icon text
  sort_order int [not null, default: 0]
  Indexes {
    (user_id, name) [unique, note: 'on lower(name)']
  }
}

Table expenses [note: 'phase 3. Fixed obligations only. Yearly normalised to monthly for totals.'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  category_id uuid [not null, ref: > expense_categories.id, note: 'on delete no action (refused like restrict; deferred for the profile cascade)']
  name text [not null]
  amount numeric [not null, note: 'check >= 0']
  currency text [not null, ref: > currencies.code]
  period expense_period [not null]
  billing_day int [note: 'day of month 1..31, clamped to the month length; null = no fixed date']
  billing_month int [note: '1..12, yearly only (check)']
  is_essential bool [not null, default: false]
  active_from date [not null]
  active_to date [note: 'check: >= active_from']
  Indexes {
    (user_id, category_id)
  }
}

Table budgets [note: 'phase 3. Variable category with a monthly limit.'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  name text [not null]
  icon text
  monthly_limit numeric [not null, note: 'check >= 0']
  currency text [not null, ref: > currencies.code]
  active_from date [not null]
  active_to date [note: 'check: >= active_from']
  Indexes {
    (user_id, active_from)
  }
}

// ---------- phase 4: where it is going ----------

Table goals [note: 'phase 4. Funded amount = sum of linked accounts (accounts.goal_id), computed by the client at today rates (ADR 0003) — never stored. achieved_at is stamped once by the server and a falling rate never clears it; archived_at is the owner decision and releases the accounts. check: target_amount > 0'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  name text [not null]
  icon text
  target_amount numeric [not null]
  currency text [not null, ref: > currencies.code]
  target_date date
  achieved_at timestamptz
  archived_at timestamptz
  sort_order int [not null, default: 0]
}

Table assets [note: 'phase 4. Owned things with an estimated value, e.g. the car. Never a Goal. Current value = latest asset_valuations row, never a column here (ADR 0002). check: purchase_price > 0'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  name text [not null]
  currency text [not null, ref: > currencies.code]
  counts_in_total bool [not null, default: false]
  acquired_on date
  purchase_price numeric
  archived_at timestamptz
}

Table asset_valuations [note: 'phase 4. Valuation history. One valuation per asset per day: unique (asset_id, valued_on). Deleting the asset takes them with it. check: value > 0'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  asset_id uuid [not null, ref: > assets.id]
  value numeric [not null]
  valued_on date [not null]
}

// ---------- phase 5: months ----------

Table snapshots [note: 'phase 5. One per user per month. draft by cron → confirmed by user. legacy = imported totals only. ADR 0005.'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  month date [not null, note: 'first day of month']
  status snapshot_status [not null]
  taken_at timestamptz [not null]
  comment text
  legacy_totals jsonb [note: 'legacy only: {"USD": "...", "EUR": "...", "RUB": "..."}']
  Indexes {
    (user_id, month) [unique]
  }
}

Table snapshot_balances [note: 'phase 5. Frozen balance of every account at snapshot time.'] {
  snapshot_id uuid [ref: > snapshots.id]
  account_id uuid [ref: > accounts.id]
  amount numeric [not null]
  currency text [not null]
  Indexes {
    (snapshot_id, account_id) [pk]
  }
}

Table snapshot_rates [note: 'phase 5. Frozen rates used by the snapshot.'] {
  snapshot_id uuid [ref: > snapshots.id]
  base text [not null]
  value_in_usd numeric [not null]
  Indexes {
    (snapshot_id, base) [pk]
  }
}

Table spends [note: 'phase 5. One actual number per Budget per month, entered at month close.'] {
  id uuid [pk]
  user_id uuid [not null, ref: > profiles.id]
  budget_id uuid [not null, ref: > budgets.id]
  month date [not null]
  amount numeric [not null]
  Indexes {
    (budget_id, month) [unique]
  }
}
